src/test/deca/context/invalid/provided/ContextSansObjet/IdentificationIntAssignString.deca
{
	int x;
	x = "Hello";
	println(x);
}